--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,5 +4,7 @@
 
 html, body {
   /* background: #010102; */
-  background-color: black;
+  /* background-color: black; */
+  /* background-color: rgb(255, 167, 167); */
+  background-color: rgb(255, 255, 255);
 }
