tokens page update

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,4 +7,24 @@
     background-color: black;
     scroll-behavior: smooth;
   }
+
+  [data-testid="rk-connect-button"] {
+    background-color: transparent !important;
+    display: flex !important; 
+    justify-content: center !important;
+    align-items: center !important;
+    border: 1px solid #FF284C !important;
+    border-radius: 8px !important;
+    color: #FF284C !important;
+    padding: 6px 22px 6px 22px !important;
+    /* height: 56px !important; */
+    font-weight: normal !important;
+  }
+
+  [data-testid="rk-connect-button"]:hover {
+    background-color: #FF284C !important;
+    border: 1px solid #FF284C !important;
+    border-radius: 8px !important;
+    color: black !important;
+  }
 }
