--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,4 +43,30 @@
   box-shadow:  0 0 1em gold, 0 0 1em red;
 }
 
+.carousel-status {
+  padding: 2px 10px !important;
+  /* border: 1px solid #FF284C !important; */
+  border-radius: 4px;
+  color: white !important;
+  /* box-shadow: none !important; */
+  text-shadow: none !important;
+  font-size: 13px !important;
+  top: 30px !important;
+  right: 8px !important;
+
+}
+
+.control-dots {
+  top: 20px;
+  /* right: 0px; */
+}
+
+.control-dots li {
+  margin: 0 5px !important;
+}
+
+.dot {
+  background-color: red !important;
+}
+
 
